# incognito

./: .containerignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: broker_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: main.py
backend/api/: auth.py  blast.py  brokers.py  deps.py  requests.py  scan.py  settings.py  setup.py
brokers/: 118-dk.yaml  11880.yaml  1881-no.yaml  192com.yaml  abr-api.yaml  acxiom-de.yaml  acxiom-es.yaml  acxiom-eu.yaml  acxiom-fr.yaml  acxiom.yaml  adform-com.yaml  adsquare.yaml  advancedbackgroundchecks.yaml  alliant.yaml  altares.yaml  ancestry.yaml  apollo.yaml  asiakastieto-fi.yaml  axesor-es.yaml  beenverified.yaml  bertelsmann-arvato.yaml  bik-pl.yaml  bisnode.yaml  bisz-hu.yaml  bkr-nl.yaml  boniversum.yaml  bureauvandjik.yaml  callcredit-transunion-uk.yaml  catalina.yaml  checkpeople.yaml  chexsystems.yaml  cision.yaml  claritas.yaml  clearbit.yaml  clearview-ai.yaml  clustrmaps.yaml  cognism.yaml  comscore.yaml  contactout.yaml  corelogic.yaml  (+162 more)
deploy/: Containerfile  incognito-check-replies.service  incognito-check-replies.timer  incognito-followup.service  incognito-followup.timer  incognito-rescan.service  incognito-rescan.timer  incognito.container
frontend/: index.html  package-lock.json  package.json  vite.config.ts
templates/: access_request.txt.j2  dpa_complaint.txt.j2  erasure_request.txt.j2  escalation_warning.txt.j2  follow_up.txt.j2
tests/: conftest.py
(+125 files in other folders)
